--- a/Quine-McCluskey/Jupyter notebook.ipynb
+++ b/Quine-McCluskey/Jupyter notebook.ipynb
@@ -10,40 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "1e2d9d77",
+   "execution_count": null,
+   "id": "dba4cfe1",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Inserte el número de variables:\n",
-      "5\n",
-      "Inserte el valor de uno de los mintérminos\n",
-      " 6\n",
-      "Inserte el valor de uno de los mintérminos\n",
-      "5\n",
-      "Inserte el valor de uno de los mintérminos\n",
-      "4\n",
-      "Inserte el valor de uno de los mintérminos\n",
-      "2\n",
-      "Inserte el valor de uno de los mintérminos\n",
-      "9\n",
-      "Paso 1: Mintérminos insertados a binario: ['0010', '0100', '0101', '0110', '1001']\n",
-      "Paso 2: La lista agrupada por cantidad de 1s es la siguiente: [[1, '0010', '0100'], [2, '0101', '0110', '1001']]\n",
-      "Paso 2: La lista agrupada por cantidad de 1s es la siguiente: [[1, '0X10', '010X', '01X0']]\n",
-      "Paso 3: La lista de implicantes primos es la siguiente: ['0X10', '010X', '01X0']\n",
-      "Paso 3: La lista de implicantes primos es la siguiente: ['0X10', '010X', '01X0', '1001']\n",
-      "Los implicantes primos con los valores repetidos eliminados es: ['0X10', '010X', '01X0', '1001']\n",
-      "Los implicantes primos esenciales son los siguientes: ['0X10', '010X', '01X0', '1001']\n",
-      "La ecuacion booleana de los minterminos dados es: Y =  A'CD' +  A'BC' +  A'BD' +  AB'C'D\n",
-      "La ejecucion se hizo en: 0.0010001659393310547segundos.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import Quine_McCluskey\n",
     "import time\n",
@@ -75,14 +47,6 @@
     "\n",
     "    print(\"La ejecucion se hizo en: \" + str(finish-start) + \"segundos.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75057e0d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
