Actualizaciones al jupyter notebook

--- a/Quine-McCluskey/Jupyter notebook.ipynb
+++ b/Quine-McCluskey/Jupyter notebook.ipynb
@@ -9,9 +9,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b385f54a",
+   "metadata": {},
+   "source": [
+    "## Funcionamiento del código Quine-McCluskey\n",
+    "\n",
+    "1. En primer lugar, se piden el número de variables a trabajar con el algoritmo.\n",
+    "2. Seguidamente se ponen los diferentes mintérminos necesarios, y se insertan en la variable array.\n",
+    "3. Posterior a esto se convierten los mintérminos a binario. \n",
+    "4. Se agrupan los minterminos por la cantidad de unos en la representación binaria.\n",
+    "5. Se buscan los implicantes primos mediante la simplificación de mintérminos que difieren en un solo bit, este proceso repite recursivamente.\n",
+    "6. Luego se encuentran los implicantes primos esenciales, mediante una función que retoma los mintérminos primos de los que está compuesto y si solo se encuentra un implicante primo se toma como esencial, este proceso también es recursivo.\n",
+    "7. Después mediante una biblioteca de constantes se asigna a cada cifra del número binario una letra mayuscula, y por último si la cifra tiene valor de uno se le ponen la letra y si es cero se pone la letra negada.\n",
+    "8. Finalmente, con las expresiones obtenidas en el punto anterior las cuales se guardan en un array, se dividen con el símbolo de \"+\" obteniendo así la expresión simplificada al máximo."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dba4cfe1",
+   "id": "191fec62",
    "metadata": {
     "scrolled": false
    },
